# shortcuts

./: .gitignore  README.md  pyproject.toml  run.pyw
shortcuts/: helpers.py  joke.py  logger.py  pepethink.py  soy.py  stfu.py
