[tool.poetry]
name = "shortcuts"
version = "0.1.0"
description = "Keybinds for shortcut functions to use day-to-day."
authors = ["atbuy <filip1253@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pyperclip = "^1.8.2"
pillow = "^9.5.0"
keyboard = "^0.13.5"
pywin32 = {version = "^306", platform = "win32"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
